# kemoji

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KEmojiConfig.cmake.in  README.md  REUSE.toml  metainfo.yaml
autotests/: CMakeLists.txt  categorytest.cpp  dicttest.cpp  emojidelegatetest.qml  emojigridtest.qml  emojimodeltest.cpp  emojitest.cpp  grouptest.cpp  modeltest.cpp  qmltest.cpp  settingstest.cpp  sortfiltermodeltest.cpp  tonestest.cpp
autotests/data/: text_file.txt
data/: CMakeLists.txt  README.md  af.dict  ak.dict  am.dict  ar.dict  ar_SA.dict  as.dict  ast.dict  az.dict  ba.dict  be.dict  bew.dict  bg.dict  bgn.dict  blo.dict  bn.dict  br.dict  bs.dict  ca.dict  ca_ES_VALENCIA.dict  ccp.dict  ceb.dict  chr.dict  ckb.dict  cs.dict  cv.dict  cy.dict  da.dict  de.dict  de_CH.dict  dsb.dict  el.dict  en.dict  en_001.dict  en_AU.dict  en_CA.dict  en_IN.dict  es.dict  es_419.dict  (+124 more)
emojier/: CMakeLists.txt  copyhelper.cpp  copyhelper.h  emojier.cpp  org.kde.emojier.desktop
emojier/ui/: CategoryPage.qml  Emojier.qml
src/: CMakeLists.txt  Messages.sh  category.cpp  category.h  dict.cpp  dict.h  emoji.cpp  emoji.h  emojicategory.h  emojicategorymodel.cpp  emojicategorymodel.h  emojidict.cpp  emojidict.h  emojifiltermodel.cpp  emojifiltermodel.h  emojimodel.cpp  emojimodel.h  group.cpp  group.h  kemoji-index.qdoc  kemoji.qdoc  kemoji.qdocconf  model.cpp  model.h  settings.cpp  settings.h  settings_p.h  sortfiltermodel.cpp  sortfiltermodel.h  tonemodel.cpp  tonemodel.h  tones.cpp  tones.h
src/quick/: CMakeLists.txt  CategoryAction.qml  EmojiDelegate.qml  EmojiGrid.qml  SubEmojiPopup.qml  ToneAction.qml  categoryattached.cpp  categoryattached.h  categoryhelper.h  kemojiquick.qdoc  kemojiquick.qdocconf  quickdict.h  quickemojidict.h  toneattached.cpp  toneattached.h  tonehelper.h
